# libdshconfig

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac  dsh.ver  libdshconfig.c  libdshconfig.dox.in
debian/: .cvsignore  README.Debian  changelog  control  copyright  rules
tests/: test-basic.sh
